fixed text wrapping

--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,6 @@ div.container {
   position: absolute;
   left: 0;
   top: 70%;
-  width: 100%;
   text-align: center;
   font-size: 15px;
   margin: 10px;
